# slurmsmac

./: FUNCTIONALITY_REVIEW.md  README.md  main.py  pyproject.toml  slurm-14350824.out  test_active_stats.py  test_basic_functionality.py  test_data_columns.py  test_efficiency_stats.py  test_ui_components.py
src/slurmsmac/: .___init__.py  __init__.py  main.py  slurm_data.py
tests/: test_active_stats.py  test_basic_functionality.py  test_data_columns.py  test_efficiency_stats.py  test_ui_components.py
